; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_get_cm_pq_idx_vf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxe/extr_ecore_dev.c_ecore_get_cm_pq_idx_vf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ecore_hwfn = type { i32 }

@.str = private unnamed_addr constant [31 x i8] c"vf %d must be smaller than %d\0A\00", align 1
@PQ_FLAGS_VFS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ecore_get_cm_pq_idx_vf(%struct.ecore_hwfn* %0, i64 %1) #0 {
  %3 = alloca %struct.ecore_hwfn*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.ecore_hwfn* %0, %struct.ecore_hwfn** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %7 = call i64 @ecore_init_qm_get_num_vfs(%struct.ecore_hwfn* %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* %5, align 8
  %10 = icmp sgt i64 %8, %9
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* %5, align 8
  %15 = call i32 @DP_ERR(%struct.ecore_hwfn* %12, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i64 %13, i64 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load %struct.ecore_hwfn*, %struct.ecore_hwfn** %3, align 8
  %18 = load i32, i32* @PQ_FLAGS_VFS, align 4
  %19 = call i64 @ecore_get_cm_pq_idx(%struct.ecore_hwfn* %17, i32 %18)
  %20 = load i64, i64* %4, align 8
  %21 = add nsw i64 %19, %20
  ret i64 %21
}

declare dso_local i64 @ecore_init_qm_get_num_vfs(%struct.ecore_hwfn*) #1

declare dso_local i32 @DP_ERR(%struct.ecore_hwfn*, i8*, i64, i64) #1

declare dso_local i64 @ecore_get_cm_pq_idx(%struct.ecore_hwfn*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
